appId: co.gogocash.app
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Accept all cookies"
    timeout: 30000
- tapOn: "Accept all cookies"
- openLink: gogocash://profile
- extendedWaitUntil:
    visible: "Sign in"
    timeout: 30000
- assertVisible: "Sign in"
